src/objects/FieloPLT__PointsUsage__c.object
<CustomObject>
    <description>It is used to audit Points: their origen and consumption.</description>
    <fields>
        <fullName>FieloPLT__PointsSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Point origen.</description>
        <inlineHelpText>Point origen.</inlineHelpText>
        <label>Points Source</label>
        <referenceTo>FieloPLT__Point__c</referenceTo>
        <relationshipLabel>Points Source Detail</relationshipLabel>
        <relationshipName>PointsSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Quantity__c</fullName>
        <description>Number of points.</description>
        <inlineHelpText>Number of points.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UsedPoints__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points used in the Transaction.</description>
        <inlineHelpText>Points used in the Transaction.</inlineHelpText>
        <label>Used Points</label>
        <referenceTo>FieloPLT__Point__c</referenceTo>
        <relationshipLabel>Used Points Detail</relationshipLabel>
        <relationshipName>UsedPoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Points Usage</label>
    <nameField>
        <displayFormat>PU-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>